--- a/src/test/resources/properties/log4j.properties
+++ b/src/test/resources/properties/log4j.properties
@@ -1,7 +1,7 @@
 #Selenium Logs
 log4j.rootLogger=DEBUG,file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=F:\\skf-project\\skf-project\\src\\test\\resources\\logs\\Selenium.logs
+log4j.appender.file.File=F:\\skf-project\\skf-rail\\src\\test\\resources\\logs\\Selenium.logs
 log4j.appender.file.maxFileSize=5000KB
 log4j.appender.file.maxBackupIndex=5
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
