--- a/src/test/resources/properties/Config.properties
+++ b/src/test/resources/properties/Config.properties
@@ -1,7 +1,7 @@
 browser=chrome
-url=https://d35xdzxf94szap.cloudfront.net/turbine-overview
-validUsername=test_Wind_1
-validPassword=2D.tu68D2
+url=https://d2ia53u12myphi.cloudfront.net/
+validUsername=dev_rail_1
+validPassword=1CM4TLFpWsNBb8fyC9pH;-
 invalidUsername=test_Wind
 invalidPassword=2Dtu68
 waitTime=30
