--- a/src/test/resources/properties/Config.properties
+++ b/src/test/resources/properties/Config.properties
@@ -5,3 +5,101 @@ validPassword=1CM4TLFpWsNBb8fyC9pH;-
 invalidUsername=test_Wind
 invalidPassword=2Dtu68
 waitTime=30
+Test_rail_1_user=Test_rail_1
+Test_rail_1_pass=!Rail_bt1!
+Test_rail_2_user=Test_rail_2
+Test_rail_2_pass=!Rail_bt2!
+Test_rail_3_user=Test_rail_3
+Test_rail_3_pass=!Rail_bt3!
+Test_rail_4_user=Test_rail_4
+Test_rail_4_pass=!Rail_bt4!
+Test_rail_5_user=Test_rail_5
+Test_rail_5_pass=!Rail_bt5!
+Test_rail_6_user=Test_rail_6
+Test_rail_6_pass=!Rail_bt6!
+Test_rail_7_user=Test_rail_7
+Test_rail_7_pass=!Rail_bt7!
+Test_rail_8_user=Test_rail_8
+Test_rail_8_pass=!Rail_bt8!
+Test_rail_9_user=Test_rail_9
+Test_rail_9_pass=!Rail_bt9!
+Test_rail_10_user=Test_rail_10
+Test_rail_10_pass=!Rail_bt10!
+Test_rail_11_user=Test_rail_11
+Test_rail_11_pass=!Rail_bt11!
+Test_rail_12_user=Test_rail_12
+Test_rail_12_pass=!Rail_bt12!
+Test_rail_13_user=Test_rail_13
+Test_rail_13_pass=!Rail_bt13!
+Test_rail_14_user=Test_rail_14
+Test_rail_14_pass=!Rail_bt14!
+Test_rail_15_user=Test_rail_15
+Test_rail_15_pass=!Rail_bt15!
+Test_rail_16_user=Test_rail_16
+Test_rail_16_pass=!Rail_bt16!
+Test_rail_17_user=Test_rail_17
+Test_rail_17_pass=!Rail_bt17!
+Test_rail_18_user=Test_rail_18
+Test_rail_18_pass=!Rail_bt18!
+Test_rail_19_user=Test_rail_19
+Test_rail_19_pass=!Rail_bt19!
+Test_rail_20_user=Test_rail_20
+Test_rail_20_pass=!Rail_bt20!
+Test_rail_21_user=Test_rail_21
+Test_rail_21_pass=!Rail_bt21!
+Test_rail_22_user=Test_rail_22
+Test_rail_22_pass=!Rail_bt22!
+Test_rail_23_user=Test_rail_23
+Test_rail_23_pass=!Rail_bt23!
+Test_rail_24_user=Test_rail_24
+Test_rail_24_pass=!Rail_bt24!
+Test_rail_25_user=Test_rail_25
+Test_rail_25_pass=!Rail_bt25!
+Test_rail_26_user=Test_rail_26
+Test_rail_26_pass=!Rail_bt26!
+Test_rail_27_user=Test_rail_27
+Test_rail_27_pass=!Rail_bt27!
+Test_rail_28_user=Test_rail_28
+Test_rail_28_pass=!Rail_bt28!
+Test_rail_29_user=Test_rail_29
+Test_rail_29_pass=!Rail_bt29!
+Test_rail_30_user=Test_rail_30
+Test_rail_30_pass=!Rail_bt30!
+Test_rail_31_user=Test_rail_31
+Test_rail_31_pass=!Rail_bt31!
+Test_rail_32_user=Test_rail_32
+Test_rail_32_pass=!Rail_bt32!
+Test_rail_33_user=Test_rail_33
+Test_rail_33_pass=!Rail_bt33!
+Test_rail_34_user=Test_rail_34
+Test_rail_34_pass=!Rail_bt34!
+Test_rail_35_user=Test_rail_35
+Test_rail_35_pass=!Rail_bt35!
+Test_rail_36_user=Test_rail_36
+Test_rail_36_pass=!Rail_bt36!
+Test_rail_37_user=Test_rail_37
+Test_rail_37_pass=!Rail_bt37!
+Test_rail_38_user=Test_rail_38
+Test_rail_38_pass=!Rail_bt38!
+Test_rail_39_user=Test_rail_39
+Test_rail_39_pass=!Rail_bt39!
+Test_rail_40_user=Test_rail_40
+Test_rail_40_pass=!Rail_bt40!
+Test_rail_41_user=Test_rail_41
+Test_rail_41_pass=!Rail_bt41!
+Test_rail_42_user=Test_rail_42
+Test_rail_42_pass=!Rail_bt42!
+Test_rail_43_user=Test_rail_43
+Test_rail_43_pass=!Rail_bt43!
+Test_rail_44_user=Test_rail_44
+Test_rail_44_pass=!Rail_bt44!
+Test_rail_45_user=Test_rail_45
+Test_rail_45_pass=!Rail_bt45!
+Test_rail_46_user=Test_rail_46
+Test_rail_46_pass=!Rail_bt46!
+Test_rail_47_user=Test_rail_47
+Test_rail_47_pass=!Rail_bt47!
+Test_rail_48_user=Test_rail_48
+Test_rail_48_pass=!Rail_bt48!
+Test_rail_49_user=Test_rail_49
+Test_rail_49_pass=!Rail_bt49!
